[package]
name = "mpv_webrpc"
version = "0.0.1"
edition = "2018"
publish = true
readme = "README.md"
authors = ["Maren Afflerbach<maren@afflerbach.info>"]
license = "WTFPL"
description = "Smakk web api for mpv"
keywords = ["mpv", "rpc", "web", "api"]
repository = "https://github.com/mafflerbach/webrpc_mpv"
homepage = "https://github.com/mafflerbach/webrpc_mpv"


[dependencies]
rocket = "0.4.5"
execute = "0.2.5"
serde_derive = "1.0"
serde_json = "1.0"
serde = "1.0"
url = "2.1.1"
config = "0.9"
tera = "1"

[dependencies.rocket_contrib]
version = "0.4.5"
default-features = false
features = ["serve","json", "handlebars_templates", "tera_templates"]




[profile.dev]
opt-level = 0  # Controls the --opt-level the compiler builds with
debug = true   # Controls whether the compiler passes `-g`

# The release profile, used for `cargo build --release`
[profile.release]
opt-level = 3
debug = false
