[package]
name = "mpv_webrpc"
version = "0.0.1"
edition = "2018"
publish = true
readme = "README.md"
authors = ["Maren Afflerbach<maren@afflerbach.info>"]
license = "WTFPL"
description = "Smakk web api for mpv"
keywords = ["mpv", "rpc", "web", "api"]
repository = "https://github.com/mafflerbach/webrpc_mpv"
homepage = "https://github.com/mafflerbach/webrpc_mpv"

[[bin]]
name = "websocket-server"
path = "src/main.rs"

[[bin]]
name = "websocket-client"
path = "src/client.rs"

[dependencies]
actix-files = "0.3"
actix-http = "2.2.0"
actix-web-actors = "3"
actix_send_websocket = "0.1.0"
actix-codec = "0.1.0"
actix = "0.10"
actix-service = "1.0.0"
actix-web = "3"
config = "0.9"
diesel = { version = "1.4.5", features = ["sqlite"] }
dotenv = "0.15.0"
env_logger = "0.8"
execute = "0.2.8"
futures = "0.3"
glob = "0.3.0"
humantime = "2.0.1"
json = "0.12"
lazy_static = "1.4.0"
libsqlite3-sys = { version = ">=0.8.0, <0.19.0", optional = true, features = ["min_sqlite_version_3_7_16"] }
openssl = { version = "0.10.30", features = ["vendored"] }
rand = "0.7.3"
regex = "1"
reqwest = "0.9.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.57"
tera = "1"
actix-broker = "0.3.1"
url = "2.1.1"
awc = "2"
bytes = "0.5.3"

[profile.dev]
opt-level = 0  # Controls the --opt-level the compiler builds with
debug = true   # Controls whether the compiler passes `-g`

# The release profile, used for `cargo build --release`
[profile.release]
opt-level = 3
debug = false

